--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
   - docker
 
 before_install:
-  - docker run -e CI=true alexyoungz/react-test npm test
+  - docker run -e CI=true alexyoungz/multi-docker npm test
 
 script:
-  - docker run alexyoungz/react-test npm test -- --coverage
+  - docker run alexyoungz/multi-docker npm test -- --coverage
 
 after_success:
   - docker build -t alexyoungz/multi-client ./client
