--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,16 @@ after_success:
   - docker push alexyoungz/multi-sever
   - docker push alexyoungz/multi-worker
 
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-655586358131
+  bucket_path: docker-multi
+  edge: true
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
+  
