--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker run -e CI=true alexyoungz/react-test npm test
+  # - docker run -e CI=true alexyoungz/react-test npm test
 
 script:
   - docker run alexyoungz/react-test npm test -- --coverage
