--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   # - docker run -e CI=true alexyoungz/react-test npm test
 
 script:
-  - docker run alexyoungz/react-test npm test -- --coverage
+  # - docker run alexyoungz/react-test npm test -- --coverage
 
 after_success:
   - docker build -t alexyoungz/multi-client ./client
